5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1715_3063.log
== TEST (2019-05-02 16:09:07) 
-- CODE:
a = int(input("PO: "))
b = input("Armadura: ")
d = int(input("Valor do dado: "))

if (a >= 200) and (b == "INTEIRA"):
	x1 = 30 * d - 20 
elif (a >= 50) and (b == "MALHA"):
	x1 = 15 * d -1 
elif (a >= 100 ) and (b == "PLACA"):	
	x1 = 20 * d - 18
print(x1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(x1)	
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:13:43) 
-- CODE:
a = int(input("PO: "))
b = input("Armadura: ").upper()
d = int(input("Valor do dado: "))

if (a >= 200) and (b == "INTEIRA"):
	x1 = 30 * d - 20 
elif (a >= 50) and (b == "MALHA"):
	x1 = 15 * d -1 
elif (a >= 100 ) and (b == "PLACA"):	
	x1 = 20 * d - 18
elif (a <= 200)	and (b == "INTEIRA") or (a <= 50) and (b == "MALHA") or (a <= 100) and (b == "PLACA"):
	x1 = "PO insuficiente"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(x1)	
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:17) 
-- CODE:
a = int(input("PO: "))
b = input("Armadura: ").upper()
d = int(input("Valor do dado: "))

if (a >= 200) and (b == "INTEIRA"):
	x1 = 30 * d - 20 
elif (a >= 50) and (b == "MALHA"):
	x1 = 15 * d -1 
elif (a >= 100 ) and (b == "PLACA"):	
	x1 = 20 * d - 18
elif (a <= 200)	and (b == "INTEIRA") or (a <= 50) and (b == "MALHA") or (a <= 100) and (b == "PLACA"):
	x1 = "PO insuficiente"
print(x1)
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:33) 
-- CODE:
a = int(input("PO: "))
b = input("Armadura: ").upper()
d = int(input("Valor do dado: "))

if (a >= 200) and (b == "INTEIRA"):
	x1 = 30 * d - 20 
elif (a >= 50) and (b == "MALHA"):
	x1 = 15 * d -1 
elif (a >= 100 ) and (b == "PLACA"):	
	x1 = 20 * d - 18
elif (a <= 200)	and (b == "INTEIRA") or (a <= 50) and (b == "MALHA") or (a <= 100) and (b == "PLACA"):
	x1 = "PO insuficiente"
print(x1)
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:49) 
-- CODE:
a = int(input("PO: "))
b = input("Armadura: ").upper()
d = int(input("Valor do dado: "))

if (a >= 200) and (b == "INTEIRA"):
	x1 = 30 * d - 20 
elif (a >= 50) and (b == "MALHA"):
	x1 = 15 * d -1 
elif (a >= 100 ) and (b == "PLACA"):	
	x1 = 20 * d - 18
elif (a <= 200)	and (b == "INTEIRA") or (a <= 50) and (b == "MALHA") or (a <= 100) and (b == "PLACA"):
	x1 = "PO insuficiente"
print(x1)
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:15:01) 
-- CODE:
a = int(input("PO: "))
b = input("Armadura: ").upper()
d = int(input("Valor do dado: "))

if (a >= 200) and (b == "INTEIRA"):
	x1 = 30 * d - 20 
elif (a >= 50) and (b == "MALHA"):
	x1 = 15 * d -1 
elif (a >= 100 ) and (b == "PLACA"):	
	x1 = 20 * d - 18
elif (a <= 200)	and (b == "INTEIRA") or (a <= 50) and (b == "MALHA") or (a <= 100) and (b == "PLACA"):
	x1 = "PO insuficiente"
print(x1)
-- EXECUTION TIME:
0.202783
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
74
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
